(front/page/fix): unpleasent scrollbar

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,13 +1,12 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-
 body {
     font-family: 'Instrument Sans', sans-serif;
+    margin: 0;
 }
 
 * {
@@ -28,4 +27,6 @@ h2 {
     min-height: 100vh;
     
     background-color: #fff; 
+    padding: 20px;
+    box-sizing: border-box;
 }
